added github link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p data-testid="currentDayOfTheWeek" id="insertDay"></p><br>
         <p data-testid="currentUTCTime" id="insertUTC"></p><br>
         <p data-testid="myTrack">Frontend</p><br>
-        <a href="#" data-testid="githubURL">githuburl</a>
+        <a href="https://github.com/adexfit/hngfirst.git" data-testid="githubURL">githuburl</a>
     </div>
 </body>
 
