--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="card">
-        <div data-testid="slackUserName">TechAdexJS</div><br>
+        <p data-testid="slackUserName">TechAdexJS</p>
         <img src="./techadex.jpg" data-testid="slackDisplayImage" alt="TechAdexJS"  class="pic"><br>
-        <p data-testid="currentDayOfTheWeek" id="insertDay"></p><br>
-        <p data-testid="currentUTCTime" id="insertUTC"></p><br>
+        <p data-testid="currentDayOfTheWeek" id="insertDay"></p>
+        <p data-testid="currentUTCTime" id="insertUTC"></p>
         <p data-testid="myTrack">Frontend</p><br>
         <a href="https://github.com/adexfit/hngfirst.git" data-testid="githubURL">githuburl</a>
     </div>
