--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="card">
-        <p data-testid="slackUserName">TechAdexJS</p>
-        <img src="./techadex.jpg" data-testid="slackDisplayImage" alt="TechAdexJS"  class="pic"><br>
+        <p data-testid="slackUserName">newTechAdexJS</p>
+        <img src="./techadex.jpg" data-testid="slackDisplayImage" alt="newTechAdexJS"  class="pic"><br>
         <p data-testid="currentDayOfTheWeek" id="insertDay"></p>
         <p data-testid="currentUTCTime" id="insertUTC"></p>
         <p data-testid="myTrack">Frontend</p><br>
